syntax = "proto3";

package auth;

option go_package = "auth_service/proto";

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string tokenType = 1; // Bearer
    string token = 2;
}